# oomol-transform

./: README.md  package.json  package.oo.yaml  pnpm-lock.yaml  pyproject.toml  requirements.txt
flows/encode/: .flow.ui.oo.json
flows/encode-and-decode/: .flow.ui.oo.json  flow.oo.yaml
flows/example/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/: .flow.ui.oo.json
flows/parse-and-stringify/: .flow.ui.oo.json  flow.oo.yaml
flows/stringify-and-parse/: .flow.ui.oo.json
flows/test/: .flow.ui.oo.json  flow.oo.yaml
tasks/decode-string/: index.ts  main.py  task.oo.yaml
tasks/encode-string/: index.ts  main.py  task.oo.yaml  tsconfig.json
tasks/object-extractor/: __init__.py  task.oo.yaml
tasks/parse-json/: main.py  task.oo.yaml
tasks/stringify-json/: main.py  task.oo.yaml
